--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.1",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tooltip": "^1.0.6",
 		"@types/node": "20.5.9",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
@@ -20,10 +25,14 @@
 		"postcss": "8.4.29",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.46.1",
+		"sonner": "^0.7.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "5.2.2"
+		"typescript": "5.2.2",
+		"usehooks-ts": "^2.9.1",
+		"zod": "3.21.4"
 	},
 	"devDependencies": {
 		"eslint": "8.48.0",
